[gd_scene load_steps=9 format=3 uid="uid://bqf7cpyvv6ghg"]

[ext_resource type="Texture2D" uid="uid://cmwb0a44bgx8l" path="res://metroidvania assets/Sprites/Enemies/Enemy2.png" id="1_dq0xw"]
[ext_resource type="Script" path="res://Scenes/Enemy/enemy.gd" id="1_sod3s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpfhk"]
size = Vector2(13, 5)

[sub_resource type="Animation" id="Animation_55idn"]
resource_name = "Dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true]
}

[sub_resource type="Animation" id="Animation_70rev"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(13, 7), Vector2(13, 4), Vector2(13, 7)]
}

[sub_resource type="Animation" id="Animation_7n0vi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xoigd"]
_data = {
"Dead": SubResource("Animation_55idn"),
"Idle": SubResource("Animation_70rev"),
"RESET": SubResource("Animation_7n0vi")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lghg5"]
radius = 8.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_sod3s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_qpfhk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dq0xw")
hframes = 7
vframes = 2
frame = 1

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xoigd")
}

[node name="RayCastY" type="RayCast2D" parent="."]
position = Vector2(8, 15)
target_position = Vector2(0, 14)

[node name="RayCastX" type="RayCast2D" parent="."]
position = Vector2(8, 13)
target_position = Vector2(10, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_lghg5")
debug_color = Color(0.901961, 0.160784, 0.658824, 0.419608)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
